# Rustwave

./: Cargo.toml
src/: error.rs  lib.rs
src/client/: client.rs
src/peer/: mod.rs  peer.rs  peer_conext.rs  peer_emitter.rs
src/server/: mod.rs  server.rs  server_handler.rs
src/utils/: broadcast_builder.rs  message.rs  mod.rs  send_data.rs
tests/: client.rs  server.rs
