[package]
name = "rustwave"
version = "0.1.0"
edition = "2024"

[features]
event-base = []
websocket = []

[dependencies]
dashmap = "6.2.1"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tokio-tungstenite = "0.29.0"
tokio-util = { version = "0.7.18", features = ["full"] }
uuid = { version = "1.23.3", features = ["v4"] }
